--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browser-sync": "^2.8.1",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-less": "^3.0.3",
     "jshint-stylish": "^2.0.1"
   }
