--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-less": "^3.0.3",
+    "gulp-uglify": "^1.2.0",
     "jshint-stylish": "^2.0.1"
   }
 }
