--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fullpage",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "simple fullpage for mobile",
   "main": "gulpfile.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-less": "^3.0.3",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
     "jshint-stylish": "^2.0.1"
   }
