--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fullpage",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "simple fullpage for mobile",
   "main": "gulpfile.js",
   "scripts": {
-    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build"
+
   },
   "repository": {
     "type": "git",
@@ -23,13 +23,11 @@
     "babel-preset-es2015": "^6.0.15",
     "browser-sync": "^2.8.1",
     "del": "^1.2.0",
-    "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-babel": "^6.0.0",
     "gulp-less": "^3.0.3",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.2.0",
-    "url-loader": "^0.5.6"
+    "gulp-uglify": "^1.2.0"
   }
 }
