--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "simple fullpage for mobile",
   "main": "gulpfile.js",
   "scripts": {
-      "lint": "jshint ./src/js/fullpage.js",
-      "build": "gulp build"
+    "lint": "jshint ./src/js/fullpage.js",
+    "build": "gulp build"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "gulp-babel": "^6.0.0",
     "gulp-less": "^3.0.3",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.2.0",
+    "jshint": "^2.9.1"
   }
 }
