--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fullpage",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "A light JavaScript framework to build fullPage site by a simple way,Write with pure JavaScript.",
   "scripts": {
     "lint": "eslint src test ./src/**.js",
@@ -24,6 +24,7 @@
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
+    "eslint": "^1.10.3",
     "eslint-config-standard": "^4.4.0",
     "eslint-plugin-standard": "^1.3.1",
     "webpack": "^1.12.12"
