--- a/package.json
+++ b/package.json
@@ -4,29 +4,31 @@
   "description": "A light JavaScript framework to build fullpage site in a simple way, write with pure JavaScript.",
   "scripts": {
     "lint": "eslint src test ./src/**.js",
-    "dev": "webpack --watch --devtool eval --progress --colors ",
-    "deploy": "set NODE_ENV=production&webpack -p --progress --profile -colors"
+    "dev": "webpack-dev-server",
+    "deploy": "set NODE_ENV=production & webpack"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kisnows/fullpage.git"
   },
   "keywords": [
-    "fullpage,slide"
+    "fullpage, slide"
   ],
-  "author": "抹桥 <yq12315@gmail.com>(http://www.kisnows.com)",
+  "author": "抹桥 <yq12315@gmail.com>(http://blog.kisnows.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/kisnows/fullpage/issues"
   },
   "homepage": "https://github.com/kisnows/fullpage#readme",
   "devDependencies": {
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "eslint": "^1.10.3",
-    "eslint-config-standard": "^4.4.0",
-    "eslint-plugin-standard": "^1.3.1",
-    "webpack": "^1.12.12"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.0.6",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^6.1.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "webpack": "^4.37.0",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
   }
 }
