--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
   "homepage": "https://github.com/kisnows/fullpage#readme",
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.0.6",
+    "babel-loader": "^7.x",
     "babel-preset-es2015": "^6.24.1",
-    "eslint": "^6.1.0",
-    "eslint-config-standard": "^13.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "webpack": "^4.37.0",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
